avutil/Makefile: install thread.h

--- a/libavutil/Makefile
+++ b/libavutil/Makefile
@@ -78,6 +78,7 @@ HEADERS = adler32.h                                                     \
           version.h                                                     \
           xtea.h                                                        \
           tea.h                                                         \
+          thread.h                                                      \
 
 HEADERS-$(CONFIG_LZO)                   += lzo.h
 
