avutil/integer: move the test to the corresponding subdirectory
And actually enable it.

Reviewed-by: Michael Niedermayer <michael@niedermayer.cc>
Signed-off-by: James Almer <jamrial@gmail.com>

--- a/libavutil/Makefile
+++ b/libavutil/Makefile
@@ -204,6 +204,7 @@ TESTPROGS = adler32                                                     \
             fifo                                                        \
             hash                                                        \
             hmac                                                        \
+            integer                                                     \
             imgutils                                                    \
             lfg                                                         \
             lls                                                         \
