Adds dnn inference module for simple convolutional networks. Reimplements srcnn filter based on it.
Signed-off-by: Pedro Arthur <bygrandao@gmail.com>

--- a/libavfilter/Makefile
+++ b/libavfilter/Makefile
@@ -12,6 +12,8 @@ OBJS = allfilters.o                                                     \
        avfiltergraph.o                                                  \
        buffersink.o                                                     \
        buffersrc.o                                                      \
+       dnn_interface.o                                                  \
+       dnn_backend_native.o                                             \
        drawutils.o                                                      \
        fifo.o                                                           \
        formats.o                                                        \
