--- a/libavformat/Makefile
+++ b/libavformat/Makefile
@@ -162,8 +162,8 @@ OBJS-$(CONFIG_DTS_DEMUXER)               += dtsdec.o rawdec.o
 OBJS-$(CONFIG_DTS_MUXER)                 += rawenc.o
 OBJS-$(CONFIG_DV_DEMUXER)                += dv.o
 OBJS-$(CONFIG_DV_MUXER)                  += dvenc.o
-OBJS-$(CONFIG_DVBSUB_DEMUXER)            += dvbsub.o
-OBJS-$(CONFIG_DVBTXT_DEMUXER)            += dvbtxt.o
+OBJS-$(CONFIG_DVBSUB_DEMUXER)            += dvbsub.o rawdec.o
+OBJS-$(CONFIG_DVBTXT_DEMUXER)            += dvbtxt.o rawdec.o
 OBJS-$(CONFIG_DXA_DEMUXER)               += dxa.o
 OBJS-$(CONFIG_EA_CDATA_DEMUXER)          += eacdata.o
 OBJS-$(CONFIG_EA_DEMUXER)                += electronicarts.o
